istio/bacque.yaml
#
# Simple Back-End using Istio
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bacque-v012
  labels:
    app: bacque
    version: Bv012
spec:
  replicas: 2
  template:
    metadata:
      annotations:
        sumologic.com/kubernetes_meta_reduce: "true"
        sumologic.com/include: "true"
      labels:
        app: bacque
        version: Bv012
    spec:
      containers:
      - name: bacque
        image: maroda/craque:Bv012
        resources:
          requests:
            memory: "32Mi"
            cpu: "200m"
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
          - containerPort: 9999
        readinessProbe:
          httpGet:
            path: /ping
            port: 9999
          periodSeconds: 2
          initialDelaySeconds: 0
          failureThreshold: 3
          successThreshold: 1
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9999"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
  name: bacque
  labels:
    app: bacque
    service: bacque
spec:
  selector:
    app: bacque
  ports:
  - port: 9999
    name: http
