istio/craque.yaml
#
# Simple Front-End using Istio
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: craque-v012
  labels:
    app: craque
    version: Cv012
spec:
  replicas: 2
  template:
    metadata:
      annotations:
        sumologic.com/kubernetes_meta_reduce: "true"
        sumologic.com/include: "true"
      labels:
        app: craque
        version: Cv012
    spec:
      containers:
      - name: craque
        image: maroda/craque:Cv012
        resources:
          requests:
            memory: "32Mi"
            cpu: "200m"
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
          - containerPort: 8888
        readinessProbe:
          httpGet:
            path: /ping
            port: 8888
          periodSeconds: 2
          initialDelaySeconds: 0
          failureThreshold: 3
          successThreshold: 1
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8888"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
  name: craque
  labels:
    app: craque
    service: craque
spec:
  selector:
    app: craque
  ports:
  - port: 8888
    name: http
