istio/craque-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: craque-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: craque
spec:
  hosts:
  - "*"
  gateways:
  - craque-gw
  http:
  - match:
    - uri:
        exact: /dt
    route:
    - destination:
        host: craque
        port:
          number: 8888
